@@ -140,7 +140,7 @@
                 </ul>
               </div>
             </tal:block>
-            <div id="kml-content-viewlet" tal:condition="view/show_map">
+            <div class="mapWidget" id="kml-content-viewlet" tal:condition="view/show_map">
               <metal:use use-macro="context/@@collectivegeo-macros/openlayers" />
               <metal:use use-macro="context/@@collectivegeo-macros/map-widget" />
             </div>
