@@ -100,6 +100,10 @@
     background-size: contain;
 }
 
+#contact-view .mapWidget {
+  margin-top: 1em;
+}
+
 /* End Contact view*/
 
 /* Memberblock view */
