@@ -5,6 +5,11 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
+- Fix geolocation lookup for georeferenced contacts.
+  The map will no longer be rendered through the viewlet. It is implemented
+  directly into the contact.pt for better control.
+  [elioschmutz]
+
 - Add missing behavior for geo referenced contact.
   [elioschmutz]
 
